objects/Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Danfoss_Material_Number__c</fullName>
        <formula>Product_Description__r.SAP_Material_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <inlineHelpText>All expedited deliveries are approximate, and based on manufacturing capacity at time of order/change order.</inlineHelpText>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click on the &quot;Lookup&quot; icon to the right to find the appropriate part number you would like expedited, including generic product codes.</inlineHelpText>
        <label>Product Description</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.SAP_Material_Code__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Deviated Request Line Items</relationshipLabel>
        <relationshipName>Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Enter the quantity of items you would like expedited.</inlineHelpText>
        <label>Quantity Expediting</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Deviated_Lead_time_Request__c</referenceTo>
        <relationshipName>Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <inlineHelpText>Enter the date you would like to receive these goods.</inlineHelpText>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Lead_Time__c</fullName>
        <inlineHelpText>Standard lead time of this item in weeks</inlineHelpText>
        <label>Standard Lead Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deviated Request Line Item</label>
    <nameField>
        <displayFormat>RLI-{000}</displayFormat>
        <label>Request Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deviated Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>